tests/integration/fail/comparison_le_number_bool.ncl
# test.type = 'error'
#
# [test.metadata]
# error = 'EvalError::NAryPrimopTypeError'
1 < 2 < 3
